实现 M04-06 供应链找货闭环
